metadata-retriever/metadata/objects/Co_Borrower_Guarantor__c.object
<CustomObject>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Co-Borrower/Guarantors</relationshipLabel>
        <relationshipName>Co_Borrower_Guarantors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractId__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Co-Borrower/Guarantors</relationshipLabel>
        <relationshipName>Co_Borrower_Guarantors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Co-Borrower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Co-Borrower/Guarantor</label>
    <nameField>
        <displayFormat>CG-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Co-Borrower/Guarantors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>